// file: metrics/proto/requests/unregister_metric_request.proto
// version: 1.0.0
// guid: 4beff2f2-e6cd-44fc-9d0e-58e5dbd3afff

edition = "2023";

package gcommon.v1.metrics;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/request_metadata.proto";
import "metrics/proto/unregistration_options.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/metrics/proto";


message UnregisterMetricRequest {
  // Standard request metadata (tracing, auth, etc.)
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Metric identifier (either name or ID)
  oneof metric_identifier {
    // Metric name to unregister
    string metric_name = 2;

    // Metric ID to unregister
    string metric_id = 3;
  }

  // Optional provider ID to unregister from
  string provider_id = 4;

  // Options for the unregistration process
  UnregistrationOptions options = 5;
}
