// file: proto/gcommon/v1/metrics/v1/metric_type_counts.proto
// version: 1.0.0
// guid: 85755727-af90-4676-b807-fa6c65517840

edition = "2023";

package gcommon.v1.metrics;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/metrics";

message MetricTypeCounts {
  int64 counter_count = 1;
  int64 gauge_count = 2;
  int64 histogram_count = 3;
  int64 summary_count = 4;
  int64 timer_count = 5;
  int64 custom_count = 6;
}
