// file: proto/gcommon/v1/metrics/v1/metrics_summary.proto
// version: 1.0.0
// guid: df4c181e-98bb-488d-8052-2238af4f3a5c

edition = "2023";

package gcommon.v1.metrics;

import "gcommon/v1/metrics/messages/error_stats.proto";
import "gcommon/v1/metrics/messages/export_status.proto";
import "gcommon/v1/metrics/messages/metric_type_counts.proto";
import "gcommon/v1/metrics/messages/performance_stats.proto";
import "gcommon/v1/metrics/messages/retention_info.proto";
import "gcommon/v1/metrics/messages/top_metrics.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/metrics";

message MetricsSummary {
  // Total number of unique metrics
  int64 total_metrics = 1;

  // Total number of data points
  int64 total_data_points = 2;

  // Total data volume (bytes)
  int64 total_data_volume_bytes = 3;

  // Metrics by type
  MetricTypeCounts type_counts = 4;

  // Performance statistics
  MetricsPerformanceStats performance = 5;

  // Error statistics
  MetricsErrorStats errors = 6;

  // Top metrics by various criteria
  TopMetrics top_metrics = 7;

  // Retention information
  MetricsRetentionInfo retention = 8;

  // Export status information
  ExportStatus export_status = 9;
}
