// file: proto/gcommon/v1/metrics/v1/query_statistics.proto
// version: 1.0.0
// guid: 65eeb9f0-7dbe-4fd5-92e0-622eb37743ee

edition = "2023";

package gcommon.v1.metrics;

import "google/protobuf/duration.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/metrics";

message QueryStatistics {
  // Total execution time
  google.protobuf.Duration execution_time = 1;

  // Number of data points processed
  int64 data_points_processed = 2;

  // Number of metrics examined
  int64 metrics_examined = 3;

  // Number of series returned
  int64 series_returned = 4;

  // Memory used during query execution (bytes)
  int64 memory_used_bytes = 5;

  // Storage backends queried
  repeated string storage_backends_used = 6;

  // Cache hit rate (0.0 to 1.0)
  double cache_hit_rate = 7;

  // When the query was executed
  google.protobuf.Timestamp query_time = 8;
}
